Fixed code example spacing

--- a/src/assets/styles/global/_base.scss
+++ b/src/assets/styles/global/_base.scss
@@ -37,8 +37,8 @@ img {
 
 code {
   font-size: .75rem;
-  padding: .25rem -1.2rem;
-  margin: 0 -.75rem;
+  margin: 0 .5rem;
+  padding: .25rem .5rem;
 }
 
 strong {
